--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.8.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
