--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
     "antd": "^5.8.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
