--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "firebase": "^10.4.0",
     "formik": "^2.4.2",
     "graphql": "^16.8.1",
+    "jsbarcode": "^3.11.6",
+    "ollama": "^0.5.8",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -29,12 +31,17 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdoc": "^4.0.2",
+    "postcss": "^8.4.39",
+    "react-jsbarcode": "^1.0.1",
     "sass": "^1.63.6",
+    "tailwindcss": "^3.4.6",
     "vite": "^4.3.9"
   }
 }
